Working with Getting Started
Signed-off-by: aavarghese <avarghese@us.ibm.com>